# SimpleVideoInput

./: .gitignore  CMakeLists.txt  README.md
cmake/modules/: FindFFmpeg.cmake
examples/: CMakeLists.txt  basic_example.cpp  file_source.cpp  web_source.cpp
src/: CMakeLists.txt  Decoder.cpp  Decoder.h  SimpleVideoInput.cpp  SimpleVideoInput.h  VideoSource.cpp  VideoSource.h
